/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.apache.skywalking.apm.network.language.agent.v2";
option csharp_namespace = "SkyWalking.NetworkProtocol";

import "common/common.proto";
import "common/trace-common.proto";

service TraceSegmentReportService {
    rpc collect (stream UpstreamSegment) returns (Commands) {
    }
}

message SegmentObject {
    UniqueId traceSegmentId = 1;
    repeated SpanObjectV2 spans = 2;
    int32 serviceId = 3;
    int32 serviceInstanceId = 4;
    bool isSizeLimited = 5;
}

message SegmentReference {
    RefType refType = 1;
    UniqueId parentTraceSegmentId = 2;
    int32 parentSpanId = 3;
    int32 parentServiceInstanceId = 4;
    string networkAddress = 5;
    int32 networkAddressId = 6;
    int32 entryServiceInstanceId = 7;
    string entryEndpoint = 8;
    int32 entryEndpointId = 9;
    string parentEndpoint = 10;
    int32 parentEndpointId = 11;
}

message SpanObjectV2 {
    int32 spanId = 1;
    int32 parentSpanId = 2;
    int64 startTime = 3;
    int64 endTime = 4;
    repeated SegmentReference refs = 5;
    int32 operationNameId = 6;
    string operationName = 7;
    int32 peerId = 8;
    string peer = 9;
    SpanType spanType = 10;
    SpanLayer spanLayer = 11;
    int32 componentId = 12;
    string component = 13;
    bool isError = 14;
    repeated KeyStringValuePair tags = 15;
    repeated Log logs = 16;
}

message Log {
    int64 time = 1;
    repeated KeyStringValuePair data = 2;
}
